# audit-mcp

./: Cargo.toml  LICENSE  README.md
.github/: copilot-instructions.md
docs/: ARCHITECTURE.md  CACHE.md  CONTRIBUTING.md  SCANNERS.md  SECURITY.md
src/: explain.rs  fixes.rs  main.rs  models.rs  runner.rs  scanners.rs  selection.rs  server.rs
