[package]
name = "audit-mcp"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
bollard = "0.21.0"
futures-util = "0.3.32"
rmcp = { version = "1.7.0", features = ["transport-io"] }
schemars = "1.2.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.23.1", features = ["v4"] }
